--- a/JS_Algos/package.json
+++ b/JS_Algos/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "readline": "^1.3.0",
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
